--- a/Lab02_task01/Lab02_task01/Lab02_task01.csproj
+++ b/Lab02_task01/Lab02_task01/Lab02_task01.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PopovYuriy.PowerCollections" Version="0.0.2-beta" />
+  </ItemGroup>
+
 </Project>
